--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@
   .main-container-intro{
     flex-wrap: wrap;
   }
+  .line-container{
+    display: none;
+  }.form-side-image{
+    display: none;
+  }
   .container-contaent-intero{
     width: 100%;
    min-height: 250px;
