Add login SignUp page

--- a/src/App.css
+++ b/src/App.css
@@ -92,3 +92,6 @@ GoogleLogin {
     background-color: #fcfcfa;
   }
 }
+.shadow-outline {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Adjust the shadow properties as needed */
+}
